--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital@1&display=swap');
 
 body {
+  position: relative;
   margin: 0;
   font-family: 'Lato', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -8,6 +9,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
@@ -117,7 +119,7 @@ code {
 
 form{
   width: 360px;
-  margin: 0 auto;
+  margin: 20px auto;
   padding: 30px;
   box-shadow: 1px 2px 3px rgba(0,0,0,0.1);
   border-radius: 10px;
@@ -197,6 +199,7 @@ button{
 textarea{
   width: 100%;
   height: 505px;
+  resize: none;
 }
 
 a{
@@ -259,6 +262,11 @@ span{
   width: 80%;
 }
 
+.delete img{
+  width: 100%;
+  height: 100%;
+}
+
 .delete:hover{
   cursor: pointer;
 }
@@ -275,4 +283,26 @@ span{
 
 }
 
+.form_textarea{  
+  width: 100%;
+  height: 50px;
+  
+}
+
+.form_comment{
+  position: absolute;
+  width: 50%;
+  margin: 250px 20px 10px;
+  
+
+}
+
+.comments p{
+  color: #00BCD4;
+  text-align: end;
+}
+
+.post_comments{
+  margin-top: 200px;
+}
 
